fixed the poeples group spacing

--- a/blocks/people/people.css
+++ b/blocks/people/people.css
@@ -3,6 +3,8 @@
 .people {
     display: flex;
     justify-content: space-evenly;
+    margin-top: 8px;
+    margin-bottom: 16px;
 }
 
 .person .tag {
@@ -30,8 +32,8 @@
     width: fit-content;
     flex-basis:0;
     flex-grow:1;
-    margin-top:10px;
-    margin-bottom:10px;
+    /* margin-top:10px; */
+    /* margin-bottom:10px; */
     margin-right:10px;
 }
 
